re PR target/33135 ([SH] -ffinite-math-only should not be on by default)

PR target/33135
	* config/sh/sh.opt (mieee): Use Var instead of Mask.  Correct
	description.
	* config/sh/sh.c (sh_option_override): Do not change 
	flag_finite_math_only.  Set TARGET_IEEE to complement of
	flag_finite_math_only.
	* doc/invoke.texi (SH options): Add mno-ieee.  Correct description
	of mieee and mno-ieee behavior.

	PR target/33135
	* gcc.target/sh/pr33135-1.c: New.
	* gcc.target/sh/pr33135-2.c: New.
	* gcc.target/sh/pr33135-3.c: New.
	* gcc.target/sh/pr33135-4.c: New.

From-SVN: r189602